fix error in project 2

--- a/Projects/P3_Text_Generation.ipynb
+++ b/Projects/P3_Text_Generation.ipynb
@@ -6,20 +6,7 @@
         "id": "ONqm8PRrjMSM"
       },
       "source": [
-        "# **Project 3 - Text Generation**\n",
-        "\n",
-        "Clara Paola Aguilar Casillas\n",
-        "\n",
-        "Daniela De La Torre Gallo\n",
-        "\n",
-        "Samantha Sánchez Tinoco"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "-----------------------------------------------------------------"
+        "# Project 3 - Text Generation"
       ]
     },
     {
@@ -33,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -46,10 +33,10 @@
         }
       ],
       "source": [
-        "from datasets import load_dataset, Dataset # para manipulacion de datos\n",
-        "from transformers import AutoTokenizer, AutoModelForCausalLM, TrainingArguments, Trainer # para modelos y tokenizacion\n",
-        "from sklearn.model_selection import train_test_split # division de datos\n",
-        "import torch # operaciones tensoriales"
+        "from datasets import load_dataset, Dataset \n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM, TrainingArguments, Trainer \n",
+        "from sklearn.model_selection import train_test_split \n",
+        "import torch "
       ]
     },
     {
@@ -58,7 +45,7 @@
         "id": "D0aDvDKCkymQ"
       },
       "source": [
-        "## Cargar e inspeccionar el dataset"
+        "## Load dataset"
       ]
     },
     {
@@ -126,11 +113,12 @@
         }
       ],
       "source": [
-        "ds = load_dataset(\"Saibo-creator/bookcorpus_deduplicated_small\") # Carga el dataset 'bookcorpus_deduplicated_small' desde HuggingFace Datasets\n",
+        "ds = load_dataset(\"Saibo-creator/bookcorpus_deduplicated_small\")\n",
         "\n",
-        "print(\"Dataset structure:\", ds) # Imprime la estructura general del dataset (splits, tamaño, etc.)\n",
-        "print(\"\\nFirst example:\", ds[\"train\"][0]) #Muestra el primer ejemplo del split 'train' para ver el registro\n",
-        "print(\"\\nColumn names:\", ds[\"train\"].column_names) # Imprime los nombres de las columnas de split 'train'"
+        "# Explore the dataset\n",
+        "print(\"Dataset structure:\", ds) \n",
+        "print(\"\\nFirst example:\", ds[\"train\"][0]) \n",
+        "print(\"\\nColumn names:\", ds[\"train\"].column_names) "
       ]
     },
     {
@@ -150,7 +138,7 @@
         "id": "b-C0lBNWk65o"
       },
       "source": [
-        "## Parte 1 - Preprocesamiento"
+        "## Part 1 - Preprocessing"
       ]
     },
     {
@@ -159,20 +147,11 @@
         "id": "ARIh1lhRlFvj"
       },
       "source": [
-        "Como no es un dataset conversacional, generamos pares secuenciales usando chunking:\n",
+        "Since it is not a conversational dataset, we generate sequential pairs by chunking:\n",
         "\n",
         "prompt = chunk i\n",
         "\n",
         "response = chunk i+1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6izgFq8olKe9"
-      },
-      "source": [
-        "Dividir el texto en parrafos"
       ]
     },
     {
@@ -183,23 +162,23 @@
       },
       "outputs": [],
       "source": [
-        "def split_into_chunks(text, chunk_size=300, overlap=50): # Define una función para dividir un texto en fragmentos (chunks) con posible superposición\n",
-        "    \"\"\"Divide el texto en chunks con posible superposición\"\"\"  # Descripción corta de la función\n",
-        "    chunks = []  # Lista donde se guardarán los chunks generados\n",
-        "    start = 0 # Posición inicial del primer chunk\n",
+        "# Divide the text into chunks\n",
+        "def split_into_chunks(text, chunk_size=300, overlap=50): \n",
+        "    chunks = []  # List to store the generated chunks\n",
+        "    start = 0 # Initial index for the chunk\n",
         "    \n",
-        "    while start < len(text):  # Continúa mientras no se llegue al final del texto\n",
-        "        end = start + chunk_size # Calcula el índice final del chunk\n",
-        "        chunk = text[start:end].strip() # Extrae el fragmento y elimina espacios al inicio y final\n",
+        "    while start < len(text):  # Continues until the end of the text\n",
+        "        end = start + chunk_size # Calculate the end index of the chunk\n",
+        "        chunk = text[start:end].strip() # Extract the chunk and remove leading/trailing whitespace\n",
         "        \n",
-        "        # Longitud mínima\n",
-        "        if len(chunk) >= 50: # Si el fragmento tiene al menos 50 caracteres, se considera válido\n",
-        "            chunks.append(chunk) # Agrega el chunk a la lista\n",
+        "        # Minimum length check\n",
+        "        if len(chunk) >= 50: \n",
+        "            chunks.append(chunk)\n",
         "        \n",
-        "        # Mover al siguiente chunk con superposición\n",
-        "        start += chunk_size - overlap  # Avanza al siguiente fragmento restando el solapamiento\n",
-        "    \n",
-        "    return chunks # Devuelve la lista de chunks generados\n"
+        "        # Move the start index for the next chunk\n",
+        "        start += chunk_size - overlap  \n",
+        "        \n",
+        "    return chunks\n"
       ]
     },
     {
