fix grammar error in project 1

--- a/Projects/P1_Sentiment_Analysis.ipynb
+++ b/Projects/P1_Sentiment_Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "acfee6d5",
    "metadata": {},
    "source": [
-    "# Proyecto 1: Análisis de Sentimiento\n",
+    "# **Proyecto 1: Análisis de Sentimiento**\n",
     "\n",
     "Clara Paola Aguilar Casillas\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9504e527",
    "metadata": {},
    "outputs": [],
